2006-05-03  David Reveman  <davidr@novell.com>

	* plugins/move.c:
	* plugins/resize.c (resizeHandleMotionEvent): Don't constrain the
	cursor.

	* plugins/rotate.c (rotateHandleEvent): Use defaultViewportForWindow
	to figure out which viewport we should move to. (bnc 152677)

	* src/window.c (addWindowSizeChanges): Offset x coordinate with
	default viewport coordinate. (bnc 171465)
	(updateWindowAttributes): Always add windows size changes. (bnc 171465)

	* include/compiz.h:
	* src/window.c (defaultViewportForWindow): Add defaultViewportForWindow
	function that computes the default viewport for a window.

2006-05-02  David Reveman  <davidr@novell.com>

	* plugins/cube.c (cubePaintTransformedScreen): Bump up size a bit more
	to make sure the cube unfolds completely.

	* src/event.c (handleEvent): Not constraints should be applied to
	ConfigureRequests for withdrawn windows. (bnc 171143)

	* src/window.c (syncWindowPosition): We never need to send synthetic
	ConfigureNotify events as we're not reparenting windows.

2006-05-02  Dan Winship  <danw@novell.com>

	* plugins/gconf-dump.c: rewrite to make compiz.schema regeneration
	a little easier, and to make it possible to generate schema files
	for third-party plugins. Include plugin descriptions and
	dependency information in the schema.

	* plugins/Makefile.am: add a rule to generate compiz.schemas

	* plugins/compiz.schemas: regen

	* plugins/cube.c, plugins/decoration.c, plugins/fade.c,
	plugins/gconf.c, plugins/minimize.c, plugins/wobbly.c:
	s/expose/scale/ in dependencies

2006-05-02  David Reveman  <davidr@novell.com>

	* include/compiz.h:
	* configure.ac: Don't require glproto, include necessary enums in
	compiz.h.

	* src/texture.c:
	* include/compiz.h: Update to latest EXT_tfp spec. Requires an
	X server that has also been updated.

	* configure.ac: Require glproto >= 1.4.7 with final EXT_tfp tokens.

2006-05-01  David Reveman  <davidr@novell.com>

	* src/window.c (circulateWindow):